--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 dotenv = "0.15"
 tokio = { version = "1", features = ["full"] }
+clap = { version = "4.0", features = ["derive"] }
